--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
+	<style>
+	  html, body, #root {
+		margin: 0;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+		background: black;
+		overflow: hidden;
+	  }
+
+	  canvas {
+		width: 105%;
+		height: 105%;
+		object-fit: cover;
+		display: block;
+		transform: scale(1.05); /* zoom del 5% */
+		transform-origin: center center;
+	  }
+	</style> 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
