--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,24 +2,28 @@
 <html lang="en">
   <head>
 	<style>
-	  html, body, #root {
+	  html, body {
 		margin: 0;
 		padding: 0;
 		width: 100%;
 		height: 100%;
-		background: black;
-		overflow: hidden;
 	  }
 
 	  canvas {
-		width: 105%;
-		height: 105%;
-		object-fit: cover;
 		display: block;
-		transform: scale(1.05); /* zoom del 5% */
-		transform-origin: center center;
+		margin: 0 auto;
+		transform: scale(1.08); /* Zooma leggermente */
+		transform-origin: center top;
 	  }
-	</style> 
+
+	  #root {
+		display: flex;
+		justify-content: center;
+		align-items: start;
+		height: 100%;
+	  }
+	</style>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
