DA FIXARE BORDI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,28 +2,13 @@
 <html lang="en">
   <head>
 	<style>
-	  html, body {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		height: 100%;
-	  }
-
 	  canvas {
+		transform: scale(1.08);
+		transform-origin: center;
 		display: block;
 		margin: 0 auto;
-		transform: scale(1.08); /* Zooma leggermente */
-		transform-origin: center top;
-	  }
-
-	  #root {
-		display: flex;
-		justify-content: center;
-		align-items: start;
-		height: 100%;
 	  }
 	</style>
-
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
