--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
   <head>
 	<style>
+	  #root {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100vw;
+		height: 100vh;
+		overflow: hidden;
+	  }
+
 	  canvas {
-		transform: scale(1.2);
-		transform-origin: center;
+		width: 100vw !important;
+		height: 100vh !important;
+		max-width: none !important;
+		max-height: none !important;
+		object-fit: cover;
 		display: block;
-		margin: 0 auto;
 	  }
 	</style>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
